--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -79,80 +79,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                        datetime     price      size\n",
-      "0     2017-07-04 17:01:38.000000  296127.0  0.010000\n",
-      "1     2017-07-04 17:01:38.000000  296016.0  0.600000\n",
-      "2     2017-07-04 17:01:39.000000  296016.0  0.018600\n",
-      "3     2017-07-04 17:01:42.000000  296550.0  0.050000\n",
-      "4     2017-07-04 17:01:50.000000  296558.0  0.050000\n",
-      "5     2017-07-04 17:01:59.000000  296539.0  0.229197\n",
-      "6     2017-07-04 17:01:59.000000  296540.0  0.200803\n",
-      "7     2017-07-04 17:02:07.000000  296539.0  0.045830\n",
-      "8     2017-07-04 17:02:07.000000  296540.0  1.010000\n",
-      "9     2017-07-04 17:02:07.000000  296560.0  0.010000\n",
-      "10    2017-07-04 17:02:07.000000  296621.0  2.000000\n",
-      "11    2017-07-04 17:02:07.000000  296660.0  0.050000\n",
-      "12    2017-07-04 17:02:07.000000  296660.0  0.050000\n",
-      "13    2017-07-04 17:02:07.000000  296660.0  0.008900\n",
-      "14    2017-07-04 17:02:07.000000  296660.0  0.023647\n",
-      "15    2017-07-04 17:02:07.000000  296680.0  0.010000\n",
-      "16    2017-07-04 17:02:07.000000  296690.0  0.010000\n",
-      "17    2017-07-04 17:02:07.000000  296700.0  0.002000\n",
-      "18    2017-07-04 17:02:07.000000  296750.0  0.001409\n",
-      "19    2017-07-04 17:02:10.000000  296745.0  0.050000\n",
-      "20    2017-07-04 17:02:11.000000  296304.0  0.050000\n",
-      "21    2017-07-04 17:02:16.000000  296355.0  0.050000\n",
-      "22    2017-07-04 17:02:17.000000  296306.0  0.045000\n",
-      "23    2017-07-04 17:02:17.000000  296306.0  0.021956\n",
-      "24    2017-07-04 17:02:17.000000  296769.0  0.001685\n",
-      "25    2017-07-04 17:02:18.000000  296306.0  1.019900\n",
-      "26    2017-07-04 17:02:20.000000  296517.0  0.050000\n",
-      "27    2017-07-04 17:02:21.000000  296517.0  0.050000\n",
-      "28    2017-07-04 17:02:21.000000  296218.0  1.019900\n",
-      "29    2017-07-04 17:02:24.000000  296518.0  0.600000\n",
-      "...                          ...       ...       ...\n",
-      "9970  2017-07-05 00:15:54.000000  290720.0  1.010000\n",
-      "9971  2017-07-05 00:15:55.000000  290719.0  0.016500\n",
-      "9972  2017-07-05 00:15:57.000000  290719.0  0.016500\n",
-      "9973  2017-07-05 00:15:57.000000  290690.0  0.016500\n",
-      "9974  2017-07-05 00:15:57.000000  290514.0  1.283500\n",
-      "9975  2017-07-05 00:15:58.000000  290719.0  0.212000\n",
-      "9976  2017-07-05 00:15:58.000000  290719.0  0.009659\n",
-      "9977  2017-07-05 00:15:58.000000  290720.0  0.030341\n",
-      "9978  2017-07-05 00:15:59.000000  290720.0  0.133900\n",
-      "9979  2017-07-05 00:16:01.000000  290720.0  0.061800\n",
-      "9980  2017-07-05 00:16:01.000000  290720.0  0.010000\n",
-      "9981  2017-07-05 00:16:02.000000  290719.0  1.030100\n",
-      "9982  2017-07-05 00:16:04.000000  290719.0  0.047570\n",
-      "9983  2017-07-05 00:16:04.000000  290720.0  0.982530\n",
-      "9984  2017-07-05 00:16:05.000000  290720.0  1.823657\n",
-      "9985  2017-07-05 00:16:05.000000  290770.0  0.245443\n",
-      "9986  2017-07-05 00:16:06.000000  290770.0  0.230000\n",
-      "9987  2017-07-05 00:16:07.000000  290770.0  0.522400\n",
-      "9988  2017-07-05 00:16:07.000000  290770.0  0.230000\n",
-      "9989  2017-07-05 00:16:08.000000  290769.0  0.040000\n",
-      "9990  2017-07-05 00:16:09.000000  290769.0  0.175491\n",
-      "9991  2017-07-05 00:16:09.000000  290770.0  0.854609\n",
-      "9992  2017-07-05 00:16:10.000000  290770.0  1.010000\n",
-      "9993  2017-07-05 00:16:12.000000  290770.0  0.010000\n",
-      "9994  2017-07-05 00:16:12.000000  290770.0  1.030100\n",
-      "9995  2017-07-05 00:16:14.000000  290769.0  0.100000\n",
-      "9996  2017-07-05 00:16:16.000000  290690.0  0.166500\n",
-      "9997  2017-07-05 00:16:19.000000  290564.0  0.040000\n",
-      "9998  2017-07-05 00:16:20.000000  290564.0  0.036900\n",
-      "9999  2017-07-05 00:16:21.000000  290564.0  1.923100\n",
-      "\n",
-      "[10000 rows x 3 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(d)"
    ]
@@ -205,12 +134,12 @@
     "        \n",
     "SqliteDBAdmin.initialize()\n",
     "#SqliteDBAdmin.create_table()\n",
-    "res = SqliteDBAdmin.read_from_sqlite(2018,10,1,2018,10,2)"
+    "res = SqliteDBAdmin.read_from_sqlite(2019,1,10,2019,1,11)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,9 +147,7 @@
     "size = []\n",
     "datetime = []\n",
     "for tick in res:\n",
-    "    datetime.append(tick.datetime)\n",
-    "    price.append(tick.price)\n",
-    "    size.append(tick.size)"
+    "    print(tick.datetime,tick.price,tick.size)"
    ]
   },
   {
@@ -292,6 +219,39 @@
    ],
    "source": [
     "100/80 - 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class data:\n",
+    "    def __init__(self):\n",
+    "        self.val = 0\n",
+    "\n",
+    "test = {}\n",
+    "d = data()\n",
+    "d.val = 1\n",
+    "test = dict(id=d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(test['id'].val)"
    ]
   },
   {
