--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -59,36 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2019-01-30 21:20:58,910 INFO sqlalchemy.engine.base.Engine PRAGMA table_info(\"select * from tick\")\n",
-      "2019-01-30 21:20:58,912 INFO sqlalchemy.engine.base.Engine ()\n",
-      "2019-01-30 21:20:58,915 INFO sqlalchemy.engine.base.Engine select * from tick\n",
-      "2019-01-30 21:20:58,915 INFO sqlalchemy.engine.base.Engine ()\n"
-     ]
-    }
-   ],
-   "source": [
-    "d = pd.read_sql('select * from tick',engine)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(d)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,106 +123,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "maa ={}\n",
-    "kairi = {}\n",
-    "\n",
-    "@jit\n",
-    "def calc_ma(term):\n",
-    "    sum = 0\n",
-    "    ma = []\n",
-    "    for i in range(term):\n",
-    "        ma.append(0)\n",
-    "        sum += price[i]\n",
-    "    for i in range(len(price) - term):\n",
-    "        sum = sum + price[i + term] - price[i]\n",
-    "        ma.append(sum / term)\n",
-    "    return ma\n",
-    "\n",
-    "@jit\n",
-    "def calc_all_ma():\n",
-    "    for i in range(10):\n",
-    "        term = (i+1) * 100\n",
-    "        maa[str(term)] = calc_ma(term)\n",
-    "\n",
-    "@jit\n",
-    "def calc_ma_kairi():\n",
-    "    for m in maa:\n",
-    "        k = []\n",
-    "        num_v = int(m)\n",
-    "        for i in range(num_v):\n",
-    "            k.append(0)\n",
-    "        for i in range(len(maa[m]) - num_v):\n",
-    "            k.append(price[i+num_v] / maa[m][i+num_v])\n",
-    "        kairi[m] = k\n",
-    "\n",
-    "calc_all_ma()\n",
-    "calc_ma_kairi()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "kairi['100']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.25"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "100/80 - 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class data:\n",
-    "    def __init__(self):\n",
-    "        self.val = 0\n",
-    "\n",
-    "test = {}\n",
-    "d = data()\n",
-    "d.val = 1\n",
-    "test = dict(id=d)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n"
+      "completed read data from DB\n",
+      "completed appended data to list\n",
+      "calculating ma, term=100\n",
+      "completed ma calc\n",
+      "calculating ma, term=200\n",
+      "completed ma calc\n",
+      "calculating ma, term=300\n",
+      "completed ma calc\n",
+      "calculating ma, term=400\n",
+      "completed ma calc\n",
+      "calculating ma, term=500\n",
+      "completed ma calc\n",
+      "calculating ma, term=600\n",
+      "completed ma calc\n",
+      "calculating ma, term=700\n",
+      "completed ma calc\n",
+      "calculating ma, term=800\n",
+      "completed ma calc\n",
+      "calculating ma, term=900\n",
+      "completed ma calc\n",
+      "calculating ma, term=1000\n",
+      "completed ma calc\n"
      ]
     }
    ],
    "source": [
-    "print(test['id'].val)"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from SqliteDBAdmin import SqliteDBAdmin\n",
+    "from numba import jit\n",
+    "import datetime\n",
+    "\n",
+    "\n",
+    "class MarketData:\n",
+    "    @classmethod\n",
+    "    def initialize(cls, year_s, month_s, day_s, year_e, month_e, day_e):\n",
+    "        cls.datetime = []\n",
+    "        cls.id = []\n",
+    "        cls.price = []\n",
+    "        cls.size = []\n",
+    "        cls.ma = {}\n",
+    "        cls.ma_kairi = {}\n",
+    "\n",
+    "        SqliteDBAdmin.initialize()\n",
+    "        ticks = SqliteDBAdmin.read_from_sqlite(year_s, month_s, day_s, year_e, month_e, day_e)\n",
+    "        print('completed read data from DB')\n",
+    "        for tick in ticks:\n",
+    "            #cls.datetime.append(datetime.datetime.strptime(tick.datetime, '%m/%d/%Y%H:%M:%S'))\n",
+    "            cls.datetime.append(tick.datetime)\n",
+    "            cls.id.append(tick.id)\n",
+    "            cls.price.append(tick.price)\n",
+    "            cls.size.append(tick.size)\n",
+    "        print('completed appended data to list')\n",
+    "        cls.__calc_all_ma()\n",
+    "        cls.__calc_ma_kairi()\n",
+    "\n",
+    "\n",
+    "    @classmethod\n",
+    "    @jit\n",
+    "    def __calc_ma(cls, term):\n",
+    "        print('calculating ma, term='+str(term))\n",
+    "        sum = 0\n",
+    "        ma = []\n",
+    "        for i in range(term):\n",
+    "            ma.append(0)\n",
+    "            sum += cls.price[i]\n",
+    "        ma.pop(0)\n",
+    "        ma.append(float(sum) / float(term))\n",
+    "        for i in range(len(cls.price) - term - 1):\n",
+    "            sum = sum + cls.price[i + term] - cls.price[i]\n",
+    "            ma.append(float(sum) / float(term))\n",
+    "        print('completed ma calc')\n",
+    "        return ma\n",
+    "\n",
+    "    @classmethod\n",
+    "    @jit\n",
+    "    def __calc_all_ma(cls):\n",
+    "        for i in range(10):\n",
+    "            term = (i+1) * 100\n",
+    "            cls.ma[str(term)] = cls.__calc_ma(term)\n",
+    "\n",
+    "    @classmethod\n",
+    "    @jit\n",
+    "    def __calc_ma_kairi(cls):\n",
+    "        for m in cls.ma:\n",
+    "            kairi = []\n",
+    "            num_v = int(m)\n",
+    "            for i in range(num_v-1):\n",
+    "                kairi.append(0)\n",
+    "            for i in range(len(cls.ma[m]) - num_v+1):\n",
+    "                kairi.append(cls.price[i + num_v-1] / cls.ma[m][i + num_v-1])\n",
+    "            cls.ma_kairi[m] = kairi\n",
+    "\n",
+    "\n",
+    "MarketData.initialize(2018,10,1,2018,10,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "oid = [0,1,2]\n",
+    "op = [100,200,100]\n",
+    "\n",
+    "def testf():\n",
+    "    def inner_f(x):\n",
+    "        op[x] = op[x]+1\n",
+    "        filter(inner_f(x) ,oid)\n",
+    "testf()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[100, 200, 100]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "op"
    ]
   },
   {
