--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -245,23 +245,185 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from SqliteDBAdmin import SqliteDBAdmin\n",
+    "from numba import jit\n",
+    "from datetime import datetime as dt\n",
+    "\n",
+    "\n",
+    "class MarketData:\n",
+    "    @classmethod\n",
+    "    def initialize(cls, year_s, month_s, day_s, year_e, month_e, day_e):\n",
+    "        cls.datetime = []\n",
+    "        cls.id = []\n",
+    "        cls.price = []\n",
+    "        cls.size = []\n",
+    "        cls.ma = {}\n",
+    "        cls.ma_kairi = {}\n",
+    "\n",
+    "        SqliteDBAdmin.initialize()\n",
+    "        ticks = SqliteDBAdmin.read_from_sqlite(year_s, month_s, day_s, year_e, month_e, day_e)\n",
+    "        print('completed read data from DB')\n",
+    "        for tick in ticks:\n",
+    "            #cls.datetime.append(dt.strptime(tick.datetime, '%Y-%m-%d %H:%M:%S'))\n",
+    "            cls.datetime.append(tick.datetime)\n",
+    "            cls.id.append(tick.id)\n",
+    "            cls.price.append(tick.price)\n",
+    "            cls.size.append(tick.size)\n",
+    "        print('completed appended data to list')\n",
+    "        cls.__calc_all_ma()\n",
+    "        cls.__calc_ma_kairi()\n",
+    "\n",
+    "\n",
+    "    @classmethod\n",
+    "    @jit\n",
+    "    def __calc_ma(cls, term):\n",
+    "        print('calculating ma, term='+str(term))\n",
+    "        sum = 0\n",
+    "        ma = []\n",
+    "        for i in range(term):\n",
+    "            ma.append(0)\n",
+    "            sum += cls.price[i]\n",
+    "        ma.pop(0)\n",
+    "        ma.append(float(sum) / float(term))\n",
+    "        for i in range(len(cls.price) - term - 1):\n",
+    "            sum = sum + cls.price[i + term] - cls.price[i]\n",
+    "            ma.append(float(sum) / float(term))\n",
+    "        print('completed ma calc')\n",
+    "        return ma\n",
+    "\n",
+    "    @classmethod\n",
+    "    @jit\n",
+    "    def __calc_all_ma(cls):\n",
+    "        for i in range(10):\n",
+    "            term = (i+1) * 100\n",
+    "            cls.ma[str(term)] = cls.__calc_ma(term)\n",
+    "\n",
+    "    @classmethod\n",
+    "    @jit\n",
+    "    def __calc_ma_kairi(cls):\n",
+    "        for m in cls.ma:\n",
+    "            kairi = []\n",
+    "            num_v = int(m)\n",
+    "            for i in range(num_v-1):\n",
+    "                kairi.append(0)\n",
+    "            for i in range(len(cls.ma[m]) - num_v+1):\n",
+    "                kairi.append(cls.price[i + num_v-1] / cls.ma[m][i + num_v-1])\n",
+    "            cls.ma_kairi[m] = kairi\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MarketData.initialize(2018,10,1,2018,10,2)\n",
+    "print(MarketData.price, MarketData.datetime)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame()\n",
+    "df['p'] = MarketData.price\n",
+    "df['dt'] = MarketData.datetime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[100, 200, 100]"
+       "['__add__',\n",
+       " '__class__',\n",
+       " '__contains__',\n",
+       " '__delattr__',\n",
+       " '__delitem__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__getitem__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__iadd__',\n",
+       " '__imul__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__iter__',\n",
+       " '__le__',\n",
+       " '__len__',\n",
+       " '__lt__',\n",
+       " '__mul__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__reversed__',\n",
+       " '__rmul__',\n",
+       " '__setattr__',\n",
+       " '__setitem__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " 'append',\n",
+       " 'clear',\n",
+       " 'copy',\n",
+       " 'count',\n",
+       " 'extend',\n",
+       " 'index',\n",
+       " 'insert',\n",
+       " 'pop',\n",
+       " 'remove',\n",
+       " 'reverse',\n",
+       " 'sort']"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "op"
+    "dt = df['dt']\n",
+    "sa = []\n",
+    "for i in range(10000):\n",
+    "    sa.append((dt[i+100] - dt[i]).seconds)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "157"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
