--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -320,92 +320,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "MarketData.initialize(2018,10,1,2018,10,2)\n",
-    "print(MarketData.price, MarketData.datetime)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df = pd.DataFrame()\n",
-    "df['p'] = MarketData.price\n",
-    "df['dt'] = MarketData.datetime"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['__add__',\n",
-       " '__class__',\n",
-       " '__contains__',\n",
-       " '__delattr__',\n",
-       " '__delitem__',\n",
-       " '__dir__',\n",
-       " '__doc__',\n",
-       " '__eq__',\n",
-       " '__format__',\n",
-       " '__ge__',\n",
-       " '__getattribute__',\n",
-       " '__getitem__',\n",
-       " '__gt__',\n",
-       " '__hash__',\n",
-       " '__iadd__',\n",
-       " '__imul__',\n",
-       " '__init__',\n",
-       " '__init_subclass__',\n",
-       " '__iter__',\n",
-       " '__le__',\n",
-       " '__len__',\n",
-       " '__lt__',\n",
-       " '__mul__',\n",
-       " '__ne__',\n",
-       " '__new__',\n",
-       " '__reduce__',\n",
-       " '__reduce_ex__',\n",
-       " '__repr__',\n",
-       " '__reversed__',\n",
-       " '__rmul__',\n",
-       " '__setattr__',\n",
-       " '__setitem__',\n",
-       " '__sizeof__',\n",
-       " '__str__',\n",
-       " '__subclasshook__',\n",
-       " 'append',\n",
-       " 'clear',\n",
-       " 'copy',\n",
-       " 'count',\n",
-       " 'extend',\n",
-       " 'index',\n",
-       " 'insert',\n",
-       " 'pop',\n",
-       " 'remove',\n",
-       " 'reverse',\n",
-       " 'sort']"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dt = df['dt']\n",
-    "sa = []\n",
-    "for i in range(10000):\n",
-    "    sa.append((dt[i+100] - dt[i]).seconds)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -424,6 +342,137 @@
     }
    ],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "completed read data from DB\n",
+      "completed appended data to list\n",
+      "calculating ma, term=100\n",
+      "completed ma calc\n",
+      "calculating ma, term=200\n",
+      "completed ma calc\n",
+      "calculating ma, term=300\n",
+      "completed ma calc\n",
+      "calculating ma, term=400\n",
+      "completed ma calc\n",
+      "calculating ma, term=500\n",
+      "completed ma calc\n",
+      "calculating ma, term=600\n",
+      "completed ma calc\n",
+      "calculating ma, term=700\n",
+      "completed ma calc\n",
+      "calculating ma, term=800\n",
+      "completed ma calc\n",
+      "calculating ma, term=900\n",
+      "completed ma calc\n",
+      "calculating ma, term=1000\n",
+      "completed ma calc\n"
+     ]
+    }
+   ],
+   "source": [
+    "import MarketData\n",
+    "MarketData.MarketData.initialize(2019,1,1,2019,1,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "p = pd.Series(MarketData.MarketData.price)\n",
+    "ma = pd.Series(MarketData.MarketData.ma['500'])\n",
+    "kairi = pd.Series(MarketData.MarketData.ma_kairi['500'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "411697.0"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p[499]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "416124.288"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ma[499]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9893606594768147"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kairi[499]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9893606594768147"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p[499]/ma[499]"
+   ]
   },
   {
    "cell_type": "code",
