--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -314,34 +314,8 @@
     "                kairi.append(0)\n",
     "            for i in range(len(cls.ma[m]) - num_v+1):\n",
     "                kairi.append(cls.price[i + num_v-1] / cls.ma[m][i + num_v-1])\n",
-    "            cls.ma_kairi[m] = kairi\n",
-    "\n"
+    "            cls.ma_kairi[m] = kairi"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "157"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -354,104 +328,93 @@
      "text": [
       "completed read data from DB\n",
       "completed appended data to list\n",
-      "calculating ma, term=100\n",
-      "completed ma calc\n",
-      "calculating ma, term=200\n",
-      "completed ma calc\n",
-      "calculating ma, term=300\n",
-      "completed ma calc\n",
-      "calculating ma, term=400\n",
-      "completed ma calc\n",
-      "calculating ma, term=500\n",
-      "completed ma calc\n",
-      "calculating ma, term=600\n",
-      "completed ma calc\n",
-      "calculating ma, term=700\n",
-      "completed ma calc\n",
-      "calculating ma, term=800\n",
-      "completed ma calc\n",
-      "calculating ma, term=900\n",
-      "completed ma calc\n",
       "calculating ma, term=1000\n",
+      "completed ma calc\n",
+      "calculating ma, term=2000\n",
+      "completed ma calc\n",
+      "calculating ma, term=3000\n",
+      "completed ma calc\n",
+      "calculating ma, term=4000\n",
+      "completed ma calc\n",
+      "calculating ma, term=5000\n",
+      "completed ma calc\n",
+      "calculating ma, term=6000\n",
+      "completed ma calc\n",
+      "calculating ma, term=7000\n",
+      "completed ma calc\n",
+      "calculating ma, term=8000\n",
+      "completed ma calc\n",
+      "calculating ma, term=9000\n",
+      "completed ma calc\n",
+      "calculating ma, term=10000\n",
       "completed ma calc\n"
      ]
     }
    ],
    "source": [
     "import MarketData\n",
-    "MarketData.MarketData.initialize(2019,1,1,2019,1,2)"
+    "MarketData.MarketData.initialize(2019,1,1,2019,1,10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "p = pd.Series(MarketData.MarketData.price)\n",
-    "ma = pd.Series(MarketData.MarketData.ma['500'])\n",
-    "kairi = pd.Series(MarketData.MarketData.ma_kairi['500'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "411697.0"
+       "172958"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "p[499]"
+    "len(MarketData.MarketData.price)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pl=60.0, num_trade=6, win_rate=1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import SimpleSim\n",
+    "s = SimpleSim.SimpleSim()\n",
+    "s.simple_sim(10000, 172900, 5000, 0.001, 1000, 1500, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "416124.288"
+       "1"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ma[499]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9893606594768147"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "kairi[499]"
+    "t = test()\n",
+    "t.sim()\n",
+    "t.val"
    ]
   },
   {
@@ -462,7 +425,71 @@
     {
      "data": {
       "text/plain": [
-       "0.9893606594768147"
+       "['__add__',\n",
+       " '__class__',\n",
+       " '__delattr__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__le__',\n",
+       " '__lt__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__radd__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__rsub__',\n",
+       " '__setattr__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__sub__',\n",
+       " '__subclasshook__',\n",
+       " 'astimezone',\n",
+       " 'combine',\n",
+       " 'ctime',\n",
+       " 'date',\n",
+       " 'day',\n",
+       " 'dst',\n",
+       " 'fold',\n",
+       " 'fromordinal',\n",
+       " 'fromtimestamp',\n",
+       " 'hour',\n",
+       " 'isocalendar',\n",
+       " 'isoformat',\n",
+       " 'isoweekday',\n",
+       " 'max',\n",
+       " 'microsecond',\n",
+       " 'min',\n",
+       " 'minute',\n",
+       " 'month',\n",
+       " 'now',\n",
+       " 'replace',\n",
+       " 'resolution',\n",
+       " 'second',\n",
+       " 'strftime',\n",
+       " 'strptime',\n",
+       " 'time',\n",
+       " 'timestamp',\n",
+       " 'timetuple',\n",
+       " 'timetz',\n",
+       " 'today',\n",
+       " 'toordinal',\n",
+       " 'tzinfo',\n",
+       " 'tzname',\n",
+       " 'utcfromtimestamp',\n",
+       " 'utcnow',\n",
+       " 'utcoffset',\n",
+       " 'utctimetuple',\n",
+       " 'weekday',\n",
+       " 'year']"
       ]
      },
      "execution_count": 18,
@@ -471,7 +498,48 @@
     }
    ],
    "source": [
-    "p[499]/ma[499]"
+    "dir(MarketData.MarketData.datetime[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2019, 1, 1, 0, 0)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "MarketData.MarketData.datetime[0].timedelta(minutes=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2019, 1, 1, 0, 1)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import datetime\n",
+    "MarketData.MarketData.datetime[0]+ datetime.timedelta(minutes=1)"
    ]
   },
   {
